# docs/openapi.yml
@@ -74,8 +74,8 @@ paths:
               $ref: "#/components/schemas/Category"
         required: true
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           content:
             application/json:
               schema:
@@ -122,7 +122,7 @@ paths:
       tags: ["Categories"]
       responses:
         "204":
-          description: OK
+          description: No Content
 
   /admin/categories/{id}/image:
     parameters:
@@ -227,8 +227,8 @@ paths:
               $ref: "#/components/schemas/Manufacturer"
         required: true
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           content:
             application/json:
               schema:
@@ -385,8 +385,8 @@ paths:
               $ref: "#/components/schemas/Product"
         required: true
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           content:
             application/json:
               schema:
@@ -438,7 +438,7 @@ paths:
       tags: ["Products"]
       responses:
         "204":
-          description: OK
+          description: No Content
 
   /admin/products/{id}/images:
     parameters:
@@ -475,8 +475,8 @@ paths:
                     format: binary
         required: true
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           content:
             application/json:
               schema:
@@ -517,7 +517,7 @@ paths:
       tags: ["Products"]
       responses:
         "204":
-          description: OK
+          description: No Content
 
 components:
   parameters:
